Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29684

Crash: If QComboBox is used in QGraphicsProxyWidget, it crashes at close

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.1
    • 5.0.1
    • Widgets: GraphicsView
    • None
    • Mac, Linux and Windows
    • 843de37bca944110fdf3aab161d680e3845d2dd2 , 615d120e5a3ccbda82dfa6eeaa445c613adc7ca2, Windows Fix: ff2dbe609ef4482d66d1ecd135b4f53f6aff7e60 (stable, 15.4.2014. 5.3.1), Qt 4: 01fd1edbb074b26a054bb545ffed979100f6be12 (15.4.2014, 4.8.7)

      Application crashes if QcomboBox is used with QGraphicsProxyWidget and if application has been closed after smiply clicking on combo box (i.e. combo getting focus)

      Attach example reproduces this problem, Run the example click on combo box and then close the app.

      (app has a slider to reproduce an artifact in another bug QTBUG-29139)

        1. qtbug29684_diag.patch
          8 kB
        2. qtbug29684_log.txt
          7 kB
        3. qtbug29684_valgrind_5.txt
          32 kB
        4. qtbug29684.zip
          3 kB
        5. stacktrace.txt
          4 kB
        For Gerrit Dashboard: QTBUG-29684
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes